<resources>
    <string name="app_name">YourTurn</string>
    <string name="email">Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="loading_data">Loading data…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_activities">Activities</string>
    <string name="menu_groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="menu_manage">Manage</string>
    <string name="logo">Logo of the app</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="add_an_activity">Add an activity</string>
    <string name="change_group">Change group</string>
    <string name="next_turn">Next turn:</string>
    <string name="last_done_by">last done by</string>
    <string name="last_done_by_date">in date</string>
    <string name="nobody_assigned_to_activity"><![CDATA[<empty list>]]></string>
    <string name="more_than_one_user_found">More users…</string>
    <string name="loading">Loading…</string>
    <string name="no_data"><![CDATA[<no data>]]></string>
    <string name="image_of_last_activity">Image of last activity</string>
    <string name="camera_icon">Camera icon</string>
    <string name="no_group_selected">No group selected</string>
    <string name="select_a_group">Select a group</string>
    <string name="create_a_new_one">Create a new one</string>
    <string name="there_was_an_error">There was an error during previous operation:</string>
    <string name="join_an_existing_group">Join an existing group</string>
    <string name="title_activity_create_group">Create group</string>

    <string name="first_step_title">Choose group name</string>
    <string name="second_step_title">Select group color</string>
    <string name="third_step_title">Recap</string>
    <string name="first_step_subtitle">Be creative, but accurate</string>
    <string name="second_step_subtitle">This will help identifying groups</string>
    <string name="third_step_subtitle">We know you need to review things</string>
    <string name="cancel">Cancel</string>
    <string name="group_name_infos">A group name will be a friendly reminder of the new created group. Remind that it will not be the identifier for this group, and you can create groups with dupplicated names.</string>
    <string name="enter_group_name_here">Enter group name here</string>
    <string name="next">Next</string>
    <string name="group_name_here">E.g. "Home Family"</string>
    <string name="group">Group</string>
    <string name="group_name_error">Invalid name!</string>
    <string name="select_group_name">Select Group Name</string>
    <string name="select_group_color">Select Group Color</string>
    <string name="color_infos">With a color you will be able to understand immediately in which group you\'re actually in. Pick your favourite one for the most important one!</string>
    <string name="sample_activity">Sample Activity</string>
    <string name="sample_user">John Smith</string>
    <string name="sample_user_2">William Duke</string>
    <string name="sample_date">21/01/2020 13:36</string>
    <string name="back_to_home">go back to home</string>
    <string name="group_recap_infos">This will be your group and this will be colours of activities. If you are sure about everything, create it now! After a group creation you will be able to tell others to join, and make activities!</string>
    <string name="check">Check</string>
    <string name="create_group">Create Group</string>
    <string name="creating_group">Creating Group</string>
    <string name="join_group">Join Group</string>
    <string name="join_a_group">Join a group</string>
    <string name="select_group_here"><![CDATA[<No Group Selected>]]></string>
    <string name="no_groups_avaiable">No groups avaiable</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="add_group">Add Group</string>
    <string name="sample_title">Sample title here</string>
    <string name="sample_add_title"><![CDATA[Add new <something>]]></string>
    <string name="edit_home">Edit home</string>
    <string name="content_of">Content of</string>
    <string name="drop_item_here_to_delete">Drop item here to remove</string>
    <string name="add">Add</string>
    <string name="edit_home_done">Edit home done</string>
    <string name="swap_position">Swap position</string>
    <string name="activities">Activities</string>
    <string name="groups">Groups</string>
    <string name="edit_this_tab_to_add">Edit this tab to add some shortcuts!</string>
    <string name="edit">Edit</string>
    <string name="add_a_group">Add a group</string>
    <string name="no_content_here">No content here</string>
    <string name="arrow_right">Arrow to right</string>


</resources>
