<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/menu_activities" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/menu_groups" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_manage"
                android:title="@string/menu_manage" />
        </menu>
    </item>

</menu>
