<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:clipToPadding="false"
    android:orientation="vertical">


    <RelativeLayout
        android:clipToPadding="false"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:textColor="@color/colorSecondaryText"
            android:id="@+id/widget_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFeatureSettings="smcp"
            android:letterSpacing=".05"
            android:text="@string/sample_title"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:background="@drawable/classic_button"
            android:id="@+id/widget_home_button_edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/edit"
            android:tint="@color/ms_white"
            android:src="@drawable/ic_edit" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/widget_home_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:visibility="gone"
        android:id="@+id/widget_home_button_add"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/classic_button_dash_border"
        android:text="@string/sample_add_title"
        android:textColor="@color/colorSecondaryText" />

    <LinearLayout
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:elevation="1dp"
        android:background="@drawable/rounded_background_white"
        android:orientation="vertical"
        android:id="@+id/widget_home_empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_content_here"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_this_tab_to_add"
            android:textColor="@color/colorSecondaryText" />
    </LinearLayout>


</LinearLayout>