<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".fragments.createGroup.FirstStep">

    <ImageView
        android:id="@+id/fragment_first_step_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/group"
        android:padding="20dp"
        android:src="@drawable/ic_groups"
        android:tint="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_group_name"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/fragment_first_step_txv_group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name_infos"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />


    <EditText
        android:id="@+id/fragment_first_step_edt_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:hint="@string/group_name_here"
        android:importantForAutofill="no"
        android:inputType="text|textFilter|textNoSuggestions"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhiteHint"
        android:textSize="25sp" />


    <ImageButton
        android:id="@+id/fragment_first_step_btn_next"
        style="@style/ClassicButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_arrow_simple_right" />


</LinearLayout><!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_left_right"
    tools:context=".fragments.createGroup.FirstStep">

    <ImageView
        app:layout_constraintLeft_toLeftOf="@id/fragment_first_step_edt_group_name"
        app:layout_constraintRight_toRightOf="@id/fragment_first_step_edt_group_name"
        app:layout_constraintBottom_toTopOf="@id/fragment_first_step_edt_group_name"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_groups"/>

    <EditText
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/enter_group_name_here"
        android:textColor="@color/colorPrimary"
        android:id="@+id/fragment_first_step_edt_group_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fragment_first_step_txv_group_info"
        app:layout_constraintTop_toBottomOf="@id/fragment_first_step_edt_group_name"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:text="@string/group_name_infos"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_first_step_txv_group_info"
        app:layout_constraintLeft_toLeftOf="@id/fragment_first_step_txv_group_info"
        app:layout_constraintRight_toRightOf="@id/fragment_first_step_txv_group_info"
        android:layout_width="200dp"
        android:src="@drawable/ic_arrow_simple_right"
        style="@style/ClassicButton"
        android:layout_height="48dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>-->